<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.proyectofinal.ui.EditarPerfil.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_editarPerfil" />

    <fragment
        android:id="@+id/ajustesFragment"
        android:name="com.example.proyectofinal.ui.Ajustes.AjustesFragment"
        android:label="@string/ajustes"
        tools:layout="@layout/fragment_ajustes" />
    <fragment
        android:id="@+id/ayudaFragment"
        android:name="com.example.proyectofinal.ui.Ayuda.Ayuda_Fragment"
        android:label="@string/ayuda"
        tools:layout="@layout/fragment_ayuda" />
    <fragment
        android:id="@+id/idiomasFragment"
        android:name="com.example.proyectofinal.ui.Idioma.IdiomasFragment"
        android:label="@string/idiomasTitulo"
        tools:layout="@layout/fragment_idiomas" />
    <fragment
        android:id="@+id/sobreNosotros_Fragment"
        android:name="com.example.proyectofinal.ui.SobreNosotros.SobreNosotros_Fragment"
        android:label="@string/sobreNosotrosTitulo"
        tools:layout="@layout/fragment_sobre_nosotros" />
    <fragment
        android:id="@+id/compartirAppFragment"
        android:name="com.example.proyectofinal.ui.Compartir.CompartirAppFragment"
        android:label="fragment_compartir_app"
        tools:layout="@layout/fragment_compartir_app" />
</navigation>